Set parent for QDialog in statement reader

Basing on comment #13, This should fix the bug.
BUG:349938
FIXED-IN:5.0

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>